// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberKeyboard should render default correctly 1`] = `
<drawer-stub maskclosable="true" placement="bottom" enablesafeareainsets="true" class="fx-number-keyboard">
  <div>
    <div class="fx-number-keyboard_body type--default">
      <ul class="fx-number-keyboard_list">
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">1</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">2</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">3</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">4</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">5</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">6</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">7</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">8</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">9</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">
            <icon-stub icon="KeyboardOutlined" size="0" width="0" height="0"></icon-stub>
          </div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">0</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">
            <icon-stub icon="BackspaceOutlined" size="0" width="0" height="0"></icon-stub>
          </div>
        </li>
      </ul>
      <!---->
    </div>
  </div>
</drawer-stub>
`;

exports[`NumberKeyboard should render props customKey="." correctly 1`] = `
<drawer-stub maskclosable="true" placement="bottom" showconfirm="true" enablesafeareainsets="true" class="fx-number-keyboard">
  <div>
    <div class="fx-number-keyboard_body type--default has--header">
      <ul class="fx-number-keyboard_list">
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">1</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">2</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">3</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">4</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">5</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">6</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">7</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">8</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">9</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">.</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">0</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">
            <icon-stub icon="BackspaceOutlined" size="0" width="0" height="0"></icon-stub>
          </div>
        </li>
      </ul>
      <!---->
    </div>
  </div>
</drawer-stub>
`;

exports[`NumberKeyboard should render props type="rightColumn" and customKey=["00", "."] correctly 1`] = `
<drawer-stub maskclosable="true" placement="bottom" enablesafeareainsets="true" class="fx-number-keyboard">
  <div>
    <div class="fx-number-keyboard_body type--rightColumn">
      <ul class="fx-number-keyboard_list">
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">1</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">2</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">3</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">4</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">5</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">6</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">7</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">8</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">9</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">00</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">0</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">.</div>
        </li>
      </ul>
      <div class="fx-number-keyboard_right-column">
        <div class="fx-number-keyboard_backspace">
          <div class="fx-number-keyboard_button">
            <icon-stub icon="BackspaceOutlined" size="0" width="0" height="0"></icon-stub>
          </div>
        </div>
        <div class="fx-number-keyboard_confirm">
          <div class="fx-number-keyboard_confirm-button">
            完成
          </div>
        </div>
      </div>
    </div>
  </div>
</drawer-stub>
`;

exports[`NumberKeyboard should render props type="rightColumn" correctly 1`] = `
<drawer-stub maskclosable="true" placement="bottom" enablesafeareainsets="true" class="fx-number-keyboard">
  <div>
    <div class="fx-number-keyboard_body type--rightColumn">
      <ul class="fx-number-keyboard_list">
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">1</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">2</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">3</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">4</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">5</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">6</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">7</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">8</div>
        </li>
        <li class="fx-number-keyboard_item span-1">
          <div class="fx-number-keyboard_button">9</div>
        </li>
        <li class="fx-number-keyboard_item span-3">
          <div class="fx-number-keyboard_button">0</div>
        </li>
      </ul>
      <div class="fx-number-keyboard_right-column">
        <div class="fx-number-keyboard_backspace">
          <div class="fx-number-keyboard_button">
            <icon-stub icon="BackspaceOutlined" size="0" width="0" height="0"></icon-stub>
          </div>
        </div>
        <div class="fx-number-keyboard_confirm">
          <div class="fx-number-keyboard_confirm-button">
            完成
          </div>
        </div>
      </div>
    </div>
  </div>
</drawer-stub>
`;
